--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -14,6 +14,7 @@
         android:layout_marginRight="0dp"
         android:layout_marginTop="0dp"
         android:adjustViewBounds="true"
+        android:contentDescription="Candy"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -23,11 +24,11 @@
         android:id="@+id/text_view_address"
         android:layout_width="0dp"
         android:layout_height="30dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginTop="16dp"
         android:gravity="center_vertical"
-        android:text="618 E South St Orlando, FL"
+        android:text="@string/location_string"
         android:textColor="?android:attr/actionMenuTextColor"
         android:textSize="18sp"
         android:clickable="true"
@@ -41,13 +42,15 @@
         android:id="@+id/text_view_phone"
         android:layout_width="0dp"
         android:layout_height="30dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginTop="16dp"
         android:gravity="center_vertical"
-        android:text="(012)345-6789"
+        android:text="@string/phone_number"
         android:textColor="?android:attr/actionMenuTextColor"
         android:textSize="18sp"
+        android:clickable="true"
+        android:onClick="createPhoneIntent"
         app:layout_constraintLeft_toLeftOf="@+id/text_view_address"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/image_view_map" />
@@ -56,10 +59,10 @@
         android:id="@+id/text_view_hours"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
-        android:layout_marginLeft="0dp"
+        android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
         android:gravity="center_vertical"
-        android:text="Everyday 10am-10pm"
+        android:text="@string/time_text"
         android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="@+id/text_view_phone"
         app:layout_constraintTop_toTopOf="@+id/image_view_hours" />
@@ -68,7 +71,8 @@
         android:id="@+id/image_view_phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
+        android:contentDescription="Phone icon"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:adjustViewBounds="true"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -79,7 +83,8 @@
         android:id="@+id/image_view_hours"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
+        android:contentDescription="Clock icon"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:adjustViewBounds="true"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -90,7 +95,8 @@
         android:id="@+id/image_view_map"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
+        android:contentDescription="Map icon"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:adjustViewBounds="true"
         app:layout_constraintLeft_toLeftOf="parent"
